[package]
name = "dwm-bar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bluetooth-battery = []

[dependencies]
chrono = { version = "0.4", features = ["unstable-locales"] }
mpris = "2.0.0-rc2"
dbus = "0.9.5"
